--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,128 +1,24 @@
 /* responsive file */
 
+/* X-Small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
 
-
-
-
-
-@media (max-width: 1200px) {
-    
-    
-}
-
-@media (max-width: 900px) and (min-width: 767px) {
-    
-    
-}
-
-@media (max-width: 768px) and (min-width: 567px) {
-    
     /* helper */
     .hide-desktop {
         display: block;
     }
 
-    /* burger */
-    .burger {
-
-        grid-column: 3/4;
-        display: grid;
-        place-items: center;
-    }
-
-    .burger i {
-        font-size: 30px;
-       
-    }
-
-    .burger i:hover {
-        color: white;
-        cursor: pointer;
-       
-    }
-
-    /* menu */
-    .navigation .menu {
-        margin: 0;
-        padding: 0;
-        position: fixed;
-        height: 92vh;
-        width: 50%;
-        top: 8vh;
-        right: 0;
-        background: coral;
-
-        grid-auto-flow: row;
-        grid-auto-rows: 15vh;
-        grid-auto-columns: 1fr;
-        align-items: unset;
-
-       
-        
-    
-    }
-
-    .navigation .menu li{
-        display: grid;
-        align-items: center;
-        width: 100%;
-        place-items: center;
-
-        
-        
-    }
-
-    .navigation .menu li:hover{
-        color: blue;
-        background: white;
-        
-    }
-
-    /* menu animation */
-
-    .navigation .menu.hide {
-       height: 0px;
-        
-        
-    }
-
-    .navigation .menu.hide li{
-        display: none;
-         
-         
-    }
-
-    .navigation .menu.show {
-       
-        height: 92vh;
-         
-    }
-
-
-    
-}
-
-@media (max-width: 578px) {
-
-     /* helper */
-     .hide-desktop {
-        display: block;
-    }
-
     .navigation .logo h4{
-    
         font-family: Poppins;
-        font-weight: 500;
+        font-weight: 700;
         letter-spacing: 0px;
         color: #0D6EFD;
         margin: 0;
         padding: 0;
-    
     }
 
     /* burger */
     .burger {
-
         grid-column: 3/4;
         display: grid;
         place-items: center;
@@ -131,13 +27,10 @@
     .burger i {
         font-size: 30px;
         color: white;
-       
     }
 
-    .burger i:hover {
-        
+    .burger i:hover { 
         cursor: pointer;
-       
     }
 
     /* menu */
@@ -145,23 +38,20 @@
         margin: 0;
         padding: 0;
         position: fixed;
-        height: 92vh;
-        width: 50%;
+        height: 42vh;
+        width: 100%;
         top: 8vh;
         right: 0;
-        background: #0A57C9;
+        background: #0D6EFD;
         /* background: #292b2c; */
         
 
         grid-auto-flow: row;
-        grid-auto-rows: 12vh;
+        grid-auto-rows: 10vh;
         grid-auto-columns: 1fr;
         align-items: unset;
 
         transition: height .1s ease;
-       
-        
-    
     }
 
     .navigation .menu li{
@@ -169,65 +59,799 @@
         align-items: center;
         width: 100%;
         place-items: center;
-        
-
-        
-        
     }
 
     .navigation .menu li:hover{
         color: #0D6EFD;
-        background: whitesmoke;
-        
+        background: whitesmoke; 
     }
 
     /* menu animation */
 
     .navigation .menu.hide {
        height: 0px;
-        
-        
     }
 
     .navigation .menu.hide li{
-        display: none;
-         
-         
+        display: none;    
     }
 
     .navigation .menu.show {
-       
-        height: 92vh;
-         
+        height: 42vh;
     }
 
+}
 
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) and (min-width: 575.98px) {
+
+    /* helper */
+    .hide-desktop {
+        display: block;
+    }
+
+    .navigation .logo h4{
+        font-family: Poppins;
+        font-weight: 700;
+        letter-spacing: 0px;
+        color: #0D6EFD;
+        margin: 0;
+        padding: 0;
+    }
+
+    /* burger */
+    .burger {
+        grid-column: 3/4;
+        display: grid;
+        place-items: center;
+    }
+
+    .burger i {
+        font-size: 30px;
+        color: white;
+    }
+
+    .burger i:hover { 
+        cursor: pointer;
+    }
+
+    /* menu */
+    .navigation .menu { 
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        height: 42vh;
+        width: 100%;
+        top: 8vh;
+        right: 0;
+        background: #0D6EFD;
+
+        grid-auto-flow: row;
+        grid-auto-rows: 10vh;
+        grid-auto-columns: 1fr;
+        align-items: unset;
+
+        transition: height .1s ease;
+    }
+
+    .navigation .menu li{
+        display: grid;
+        align-items: center;
+        width: 100%;
+        place-items: center;
+    }
+
+    .navigation .menu li:hover{
+        color: #0D6EFD;
+        background: whitesmoke; 
+    }
+
+    /* menu animation */
+
+    .navigation .menu.hide {
+       height: 0px;
+    }
+
+    .navigation .menu.hide li{
+        display: none;    
+    }
+
+    .navigation .menu.show {
+        height: 42vh;
+    }
+}
+
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) and (min-width: 767.98px) {
+    /* helper */
+
+    body {
+        background: #0D6EFD;
+    }
+
+    .hide-desktop {
+        display: block;
+    }
+
+    .navigation .logo h4{
+        font-family: Poppins;
+        font-weight: 700;
+        letter-spacing: 0px;
+        color: #0D6EFD;
+        margin: 0;
+        padding: 0;
+    }
+
+    /* burger */
+    .burger {
+        grid-column: 3/4;
+        display: grid;
+        place-items: center;
+    }
+
+    .burger i {
+        font-size: 30px;
+        color: white;
+    }
+
+    .burger i:hover { 
+        cursor: pointer;
+    }
+
+    /* menu */
+    .navigation .menu { 
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        height: 42vh;
+        width: 100%;
+        top: 8vh;
+        right: 0;
+        background: #0D6EFD;
+
+        grid-auto-flow: row;
+        grid-auto-rows: 10vh;
+        grid-auto-columns: 1fr;
+        align-items: unset;
+
+        transition: height .1s ease;
+    }
+
+    .navigation .menu li{
+        display: grid;
+        align-items: center;
+        width: 100%;
+        place-items: center;
+    }
+
+    .navigation .menu li:hover{
+        color: #0D6EFD;
+        background: whitesmoke; 
+    }
+
+    /* menu animation */
+
+    .navigation .menu.hide {
+       height: 0px;
+    }
+
+    .navigation .menu.hide li{
+        display: none;    
+    }
+
+    .navigation .menu.show {
+        height: 42vh;
+    }
 
     /* carousel */
-    
-    .carousel-control-prev, .carousel-control-next{
-        display: none;
+
+    .br1 {
+        display: block;
     }
 
-    .container {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        
-        
-        /* padding-bottom: 30vh;
-        padding-left: 50px; */
-    
-    }
-
-    .carousel-item h1 {
+    h1 {
         font-size: 50px;
-        font-family: Poppins;
-        letter-spacing: 0px;
     }
 
+    .p1 {
+        font-size: 20px;
+    }
+
+    .btn.btn-primary.button1 {
+        padding: 10px 15px;
+        font-size: 24px;
+        margin-top: 5px;
+    }
+
+    /* benefits */
+    .benefits {
+        height: 30vh;
+    }
+    .benefits-item {
+        padding: 2rem 1rem;
+    }
+
+    .benefits h2 {
+        color: white;
+        font-size: 24px;
+        
+    }
+    .benefits h3 {
+        color: white;
+        font-size: 20px;
+        
+    }
+    .benefits p {
+        color: whitesmoke;
+        font-weight: 300;
+    }
+
+    /* services */
+
+    .title {
+        height: 25vh;
+    }
+
+    .title h2{
+        font-size: 30px;
+    }
+
+   
+    .serviceItems {
+        
+        padding: 1rem;
+        margin: 0px;
+        margin-bottom: 2rem;
+        border-radius: 4px;
+        border: solid 1px #0D6EFD;
+    }
+
+    .btn.btn-outline-primary.button2 {
+        padding: 10px 20px;
+        display: block;
+        margin: 2rem auto 1rem auto;
+    }
+
+    /* about */
+
+    .about-info {
+        padding: 7.5rem 2.5rem;
+    }
+    
+    .about-info h2 {
+        color: white;
+        margin-bottom: 1rem;
+    }
+    
+    .about p {
+        color: white;
+        text-align: justify;
+    }
+
+    /* Projects */
+
+    .projects .title {
+        height: 25vh;
+    }
+
+    /* cta */
+
+    .cta-item {
+        height: 30vh;
+    }
+
+    .cta h2 {
+        font-size: 30px;
+    }
+
+    .cta p {
+        font-size: 20px;
+    }
+
+    /* maps */
+    .contact-maps {
+        height: 30vh;
+        
+    }
+
+    .footer {
+        text-align: unset;
+    }
+
+}
+
+/* Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) and (min-width: 991.98px) {
+
+    body {
+        background: #0D6EFD;
+    }
+
+    .nav-container {
+
+        grid-template-columns: 50px 1fr auto 50px;
+    }
+
+    /* carousel */
+
+    .br1 {
+        display: block;
+    }
+
+    h1 {
+        font-size: 70px;
+    }
+
+    .p1 {
+        font-size: 24px;
+    }
+
+    .btn.btn-primary.button1 {
+        padding: 15px 20px;
+        font-size: 30px;
+        margin-top: 15px;
+    }
+
+    /* benefits */
+
+    .benefits {
+        height: unset;
+    }
+    .benefits-item {
+        padding: 2rem;
+    }
+
+    .benefits h2 {
+        font-size: 40px;
+        
+    }
+    .benefits h3 {
+        font-size: 30px;
+        
+    }
+    .benefits p {
+        font-size: 18px;
+    }
+
+    /* services */
+
+    .title {
+        height: 20vh;
+    }
+
+    .title h2{
+        font-size: 40px;
+    }
+
+    .serviceItems {
+       width: 300px;
+       height: 450px;
+    }
+
+    /* about */
+
+    .about-img {
+        height: 30vh;
+    }
+
+    .about-info {
+        height: 30vh;
+        padding: 7.5rem 5rem;
+    }
+    
+    .about-info h2 {
+        font-size: 40px;
+        margin-bottom: 1.5rem;
+    }
+    
+    .about p {
+        color: whitesmoke;
+    }
+
+    /* projects */
+
+    .projects .title {
+        height: 20vh;
+    }
+
+    .project-items {
+        margin-bottom: 3rem;
+    }  
+
+    /* cta */
+
+    .cta-item {
+        height: 30vh;
+    }
+
+    .cta h2 {
+        font-size: 36px;
+    }
+
+    .cta p {
+        font-size: 20px;
+    }
+
+    /* contacts */
+
+    .btn.btn-primary.button5 {
+        padding: 10px 15px;
+        font-size: 24px;
+        margin-top: 5px;
+    }
+
+    .footer {
+        text-align: unset;
+    }
+
+    .footer-hide {
+        display: block;
+    }
+    
     
 }
 
+/* X-Large devices (large desktops, less than 1400px) */
+@media (max-width: 1399.98px) and (min-width: 1199.98px) {
 
+    body {
+        background: #0D6EFD;
+    }
+
+    .nav-container {
+        grid-template-columns: 50px 1fr auto 50px;
+    }
+
+       /* carousel */
+
+    .br1 {
+        display: block;
+    }
+
+    h1 {
+        font-size: 70px;
+    }
+
+    .p1 {
+        font-size: 20px;
+    }
+
+    .btn.btn-primary.button1 {
+        padding: 15px 20px;
+        font-size: 24px;
+        margin-top: 10px;
+    }
+
+    /* benefits */
+
+    .benefits {
+        height: 30vh;
+    }
+    .benefits-item {
+        padding: 1.75rem;
+    }
+
+    .benefits h2 {
+        font-size: 30px;
+        
+    }
+    .benefits h3 {
+        font-size: 24px;
+        
+    }
+    .benefits p {
+        font-size: 16px;
+    }  
+
+    
+    /* services */
+    .services {
+        height: 100vh;
+    }
+    .title {
+        height: 30vh;
+    }
+
+    .title h2{
+        font-size: 30px;
+    }
+
+    .serviceItems {
+       width: 300px;
+       height: 450px;
+       margin: 1rem;
+    }
+
+    .serviceItems h3 {
+        font-size: 24px;
+     }
+
+    /* about */
+
+    .about {
+        height: 60vh;
+    }
+
+    .about-img {
+        height: 60vh;
+    }
+
+    .about-info {
+        padding: 5rem;
+    }
+    
+    .about-info h2 {
+        font-size: 30px;
+        margin-bottom: 1rem;
+    }
+    
+    .about p {
+        color: whitesmoke;
+    }
+
+    /* projects */
+
+    .projects .title {
+        height: 30vh;
+    }
+
+    .project-items {
+        margin-bottom: 3rem;
+        
+    }  
+
+    /* cta */
+
+    .cta-item {
+        height: 40vh;
+    }
+    
+    .cta h2 {
+        font-size: 30px;
+    }
+
+    .cta p {
+        font-size: 20px;
+    }
+
+    /* contacts */
+
+    .contact-maps {
+        height: 100vh;
+        background-image: url(../img/map.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        
+    }
+
+    .btn.btn-primary.button5 {
+        padding: 10px 15px;
+        font-size: 20px;
+        margin-top: 5px;
+    }
+
+    /* footer */
+    .footer {
+        height: 25vh;
+        text-align: unset;
+    }
+
+    .footer-hide {
+        display: block;
+    }
+}
+
+@media (max-width: 1920px) and (min-width: 1399.98px) {
+
+    body {
+        background: #0D6EFD;
+    }
+
+    .nav-container {
+
+        grid-template-columns: 50px 1fr auto 50px;
+    }
+
+    .carousel-control-prev, .carousel-control-next {
+        display: block;
+    }
+
+       /* carousel */
+
+    .br1 {
+        display: block;
+    }
+
+    h1 {
+        font-size: 80px;
+    }
+
+    .p1 {
+        font-size: 24px;
+    }
+
+    .btn.btn-primary.button1 {
+        padding: 15px 20px;
+        font-size: 28px;
+        margin-top: 10px;
+    }
+
+    
+    /* benefits */
+
+    .benefits {
+        height: 30vh;
+    }
+    .benefits-item {
+        padding: 4rem 2.5rem;
+    }
+
+    .benefits h2 {
+        font-size: 40px;
+        
+    }
+    .benefits h3 {
+        font-size: 30px;
+        
+    }
+    .benefits p {
+        font-size: 16px;
+    }  
+
+    
+    /* services */
+    .services {
+        height: 100vh;
+    }
+
+    .title {
+        height: 30vh;
+        
+    }
+
+    .title h2{
+        font-size: 40px;
+    }
+
+    .title p {
+        font-size: 24px;
+    }
+
+    .serviceItems {
+       width: 400px;
+       height: 550px;
+       margin: 1rem;
+    }
+
+    .icon-container {
+        margin: 1rem auto;
+        display: inline-block;
+        text-align: center;
+        background: #0D6EFD;
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+    }
+    
+    .serviceItems i{
+        display: block;
+        color: white;
+        line-height: 100px;
+        font-size: 30px;
+    }
+
+    .serviceItems h3 {
+        font-size: 30px;
+        margin: 1rem;
+    }
+
+    .serviceItems p {
+        font-size: 20px;
+        margin: 1rem;
+    }
+
+    .btn.btn-outline-primary.button2 {
+        font-size: 20px;
+        padding: 15px 30px;
+        display: block;
+        margin: 2rem auto 1rem auto;
+    }
+
+    .spacer {
+        display: block;
+    }
+
+    /* about */
+    
+    .about {
+        height: 40vh;
+        overflow: hidden;
+    }
+
+    .about-img {
+        height: 40vh;
+    }
+
+    .about-info {
+        padding: 5rem;
+    }
+    
+    .about-info h2 {
+        font-size: 40px;
+        margin-bottom: 1rem;
+    }
+    
+    .about p {
+        font-size: 18px;
+        color: whitesmoke;
+    }
+
+     /* projects */
+
+     .projects .title {
+        height: 30vh;
+    }
+
+    .project-items {
+        margin-bottom: 3rem;
+        
+    }  
+
+    /* cta */
+
+    .cta-item {
+        height: 40vh;
+    }
+    
+    .cta h2 {
+        font-size: 40px;
+    }
+
+    .cta p {
+        font-size: 24px;
+    }
+
+    
+    /* contacts */
+
+    .contact-maps {
+        height: 80vh;
+        background-image: url(../img/map.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .contact h2{
+        font-size: 40px;
+    }
+
+    .btn.btn-primary.button5 {
+        padding: 20px 30px;
+        font-size: 24px;
+        margin-top: 10px;
+    }
+
+    /* footer */
+    .footer {
+        height: 20vh;
+        text-align: unset;
+        
+    }
+
+    .footer h5{
+        font-size: 30px;
+    }
+
+    .footer p{
+        font-size: 18px;
+    }
+
+    .footer-hide {
+        display: block;
+    }
+}
+
+/* XX-Large devices (larger desktops)
+No media query since the xxl breakpoint has no upper bound on its width */
